--- a/pages/core/style.css
+++ b/pages/core/style.css
@@ -252,6 +252,9 @@
 
   /*Các list dịch vụ mà ko hiển thị
   */
+  .services-list-4,
+  .services-list-6,
+  .services-list-7,
   .offers,
   .customer-review{
     display: none;
